--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,45 @@
-<h2>Forgot your password?</h2>
+<section class="wrapper style1">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card shadow-sm mb-4">
+          <div class="card-header bg-dark text-white text-center py-3">
+            <h2 class="mb-0 fs-4">Recuperar Contraseña</h2>
+          </div>
+          <div class="card-body p-4">
+            <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }, local: true) do |f| %>
+              <% if resource.errors.any? %>
+                <div class="alert alert-danger" role="alert">
+                  <h6><i class="fas fa-exclamation-triangle me-2"></i>Por favor corrige los siguientes errores:</h6>
+                  <ul class="mb-0">
+                    <% resource.errors.full_messages.each do |message| %>
+                      <li><%= message %></li>
+                    <% end %>
+                  </ul>
+                </div>
+              <% end %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+              <div class="form-group mb-3">
+                <%= f.label :email, "Correo electrónico", class: "form-label" %>
+                <div class="input-group">
+                  <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                  <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Ingresa tu correo electrónico" %>
+                </div>
+              </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+              <div class="d-grid gap-2">
+                <%= f.submit "Enviar instrucciones", class: "btn btn-primary btn-lg" %>
+              </div>
+            <% end %>
+
+            <hr class="my-4">
+            
+            <div class="text-center">
+              <%= render "devise/shared/links" %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
