--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,38 @@
 	
 	<%= render 'partials/navigation' %>
 
+	<!-- Flash Messages -->
+	<% if notice %>
+		<div class="alert alert-success alert-dismissible fade show" role="alert">
+			<i class="fas fa-check-circle me-2"></i>
+			<%= notice %>
+			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
+	<% end %>
+
+	<% if alert %>
+		<div class="alert alert-danger alert-dismissible fade show" role="alert">
+			<i class="fas fa-exclamation-triangle me-2"></i>
+			<%= alert %>
+			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
+	<% end %>
+
+	<% flash.each do |type, message| %>
+		<% next if ['notice', 'alert'].include?(type) %>
+		<% alert_class = case type
+			when 'success' then 'alert-success'
+			when 'error' then 'alert-danger'
+			when 'warning' then 'alert-warning'
+			when 'info' then 'alert-info'
+			else 'alert-secondary'
+		end %>
+		<div class="alert <%= alert_class %> alert-dismissible fade show" role="alert">
+			<%= message %>
+			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
+	<% end %>
+
 	<div id="main">
 		<%= yield %>
 	</div>
