--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -39,14 +39,14 @@
     <h2 class="mb-4">Últimos artículos</h2>
 
     <div class="row">
-      <% Post.published.order("created_at DESC").all.take(3).each do |post| %>
+      <% Post.published.includes(:image_attachment).order("created_at DESC").limit(3).each do |post| %>
         <div class="col-md-12 mb-4">
           <div class="card shadow-sm">
             <div class="row g-0">
               <div class="col-md-3 d-flex align-items-center">
                 <% if post.image.attached? %>
                   <div class="p-2" style="height: 170px; width: 100%;">
-                    <%= image_tag post.image.variant(:thumb), class: "rounded-start", style: "object-fit: cover; height: 100%; width: 100%;" %>
+                    <%= image_tag post.image.variant(:thumb), class: "rounded-start", style: "object-fit: cover; height: 100%; width: 100%;", loading: "lazy" %>
                   </div>
                 <% end %>
               </div>
