--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,13 +1,14 @@
 <div>
   <article>
     <div class="mb-4">
-      <%= image_tag "new_main_data.png", class: "img-fluid rounded w-100", loading: "lazy" %>
+      <%= image_tag "about_book.jpg", class: "img-fluid rounded w-100", loading: "lazy" %>
     </div>
 
-    <h1 class="mb-3 h2">Tecnología Consciente, Soluciones Digitales a tu Medida.</h1> 
-    <div class="px-md-4 mb-5"> <p>En Greyhat, nos sumergimos en el mundo de la tecnología no solo como usuarios, 
-    sino como pensadores críticos y exploradores conscientes. Nos enfocamos en la interacción humana y la
-      experiencia de usuario para crear soluciones que realmente conectan.</p>
+    <h1 class="mb-3 h2">Tecnología, atención y la mente digital.</h1> 
+    <div class="px-md-4 mb-5"> <p>En un mundo saturado de estímulos y trampas mentales, este blog propone otra cosa: pensar con atención plena.
+Sin filtros, sin promesas vacías. Solo ideas que invitan a cuestionar lo que damos por hecho.
+    <br><br>
+    Este es un espacio para detenerse, observar y reconectar con nuestra naturaleza pensante.</p>
     </div>
 
     <h2 class="mb-4">Últimos artículos</h2>
@@ -46,31 +47,6 @@
     <div class="text-center mt-3">
       <a href="/articulos" class="btn btn-primary">Ver todos los artículos</a>
     </div>
-    <br><br>
-
-
-    <section class="mb-5 py-4 bg-light rounded">
-      <div class="container">
-        <h2 class="mb-4">Nuestros Servicios Profesionales</h2>
-        <div class="row">
-          <div class="col-md-6 mb-3 mb-md-0">
-            <div class="p-4 h-100">
-              <i class="fas fa-laptop-code fa-3x text-primary mb-3"></i> 
-              <h3 class="mb-3">Desarrollo Web y Consultoría en IA</h3>
-              <p class="mb-3">Creamos soluciones web a medida y te guiamos para integrar la IA Generativa en tus desarrollos, optimizando procesos y fomentando la innovación con código de calidad.</p>
-              <a href="/servicios#desarrollo-web" class="btn btn-outline-primary">Desarrollo e Innovación con IA</a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="p-4 h-100">
-              <i class="fas fa-shield-alt fa-3x text-primary mb-3"></i>
-              <h3 class="mb-3">Consultoría Estratégica en Ciberseguridad</h3>
-              <p class="mb-3">Te asesoramos para fortalecer tu postura de seguridad, desde la estrategia y arquitectura hasta la capacitación de tus equipos en desarrollo seguro, aplicando también la IA como aliada.</p>
-              <a href="/servicios#seguridad-informatica" class="btn btn-outline-primary">Fortalece tu Ciberseguridad</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    
   </article>
 </div>
