--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 					<%= form.text_field :q, 
 						placeholder: "Buscar...", 
 						class: "form-control form-control-sm border-0",
-						style: "background-color: rgba(255,255,255,0.9); border-radius: 20px 0 0 20px;",
+						class: "form-control form-control-sm border-0 search-input",
 						value: params[:q] %>
 					<button class="btn btn-primary btn-sm border-0" 
 							type="submit" 
