dashboard setup & search fix

--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -38,9 +38,9 @@
             <div class="input-group">
               <%= form.text_field :q, 
                   placeholder: "Buscar artículos...", 
-                  class: "form-control",
+                  class: "form-control mobile-search-input",
                   value: params[:q] %>
-              <button class="btn btn-outline-light" type="submit">
+              <button class="btn btn-outline-light mobile-search-button" type="submit">
                 <i class="fas fa-search"></i>
               </button>
             </div>
